
* docutils/transforms/references.py

  - Ignore `citation_reference` nodes if the "use_bibex" setting is
    active. In this case, citations are provided by LaTeX/BibTeX.
    Fixes bug #384.

* docutils/utils/__init__.py

  - New utility function `xml_declaration()`.
  - `DependencyList.add()` accepts `pathlib.Path` instances.
  - `find_file_in_dirs()` now returns a POSIX path also on Windows;
    `get_stylesheet_list()` no longer converts "\" to "/".

* docutils/utils/math/latex2mathml.py

  - Support "mod" notation for modulo operation/modulus arithmetic.

* docutils/utils/math/tex2mathml_extern.py

  - Support `pandoc` as LaTeX to MathML converter. Patch by Ximin Luo.

* docutils/writers/_html_base.py

  - Refactoring of HTMLTranslator initialization and collecting of
    document "parts". Adapt HTML writers importing `_html_base`.

    Changes to the HTML output (no space character before closing tag of
    XML declaration, order of metadata elements)
    don't affect the HTML semantics, styling, and rendering.

  - Wrap definition lists with "details" class argument in a <div>
    with the "id" and "class" values of the list node.

  - Use dpub-ARIA role "doc-footnote" (instead of ARIA role "note")
    for footnotes.

* docutils/writers/latex2e/__init__.py

  - Do not insert ``\usepackage[utf8]{inputenc}`` into UTF-8 encoded
    LaTeX sources. UTF-8 is the default encoding for LaTeX2e since 2018.
  - Fix handling of the "use_bibtex" setting.

* docutils/writers/latex2e/titlepage.tex

  - Drop ``\usepackage{fixltx2e}`` from template. (Obsolete since 2015
    and dropped from other templates in Docutils 0.14.)

* docutils/writers/manpage.py

  - Do not output empty "manual" in ``.TH``

* docutils/writers/xetex/__init__.py

  - Ignore settings in the [latex2e writer] configuration file section.

* setup.py

  - Fix SetuptoolsDeprecationWarning: ``Installing '' as data is deprecated``
    by adding data directories to package_data.packages list.

* tox.ini
