@@ -56,7 +56,7 @@ Changes Since 0.19
   - New utility function `xml_declaration()`.
   - `DependencyList.add()` accepts `pathlib.Path` instances.
   - `find_file_in_dirs()` now returns a POSIX path also on Windows;
-    `get_stylesheet_list()` no longer converts "\" to "/".
+    `get_stylesheet_list()` no longer converts ``\`` to ``/``.
 
 * docutils/utils/math/latex2mathml.py
 
@@ -86,6 +86,7 @@ Changes Since 0.19
   - Do not insert ``\usepackage[utf8]{inputenc}`` into UTF-8 encoded
     LaTeX sources. UTF-8 is the default encoding for LaTeX2e since 2018.
   - Fix handling of the "use_bibtex" setting.
+  - Use POSIX paths in stylesheet loading macros [report Alan G. Isaac].
 
 * docutils/writers/latex2e/titlepage.tex
 
